Clean up AbstractEnumerationBuilder
We can use Java 17, fluent StringBuilder and streams to make the code
denser.

Change-Id: Id0b8bc176076469120fddbb993e9a59215aa660a
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>